Derma-224, 222 feat(backend): change package locations, add auth exeptions, add auth tests, refactor auth responses, rm hardcoded secrets, update jjwt, refactor/simplify securityConfig