@@ -1,27 +1,27 @@
 package de.dermatrack.backend.auth.jwt;
 
-import jakarta.servlet.FilterChain;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.util.Collections;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
-import java.io.IOException;
-import java.util.Collections; // Using Collections in real life after learning it in Java Vorlesung. Life is good!
-
-//  This handles only ACCESS TOKENS
+import de.dermatrack.backend.auth.repository.IAppUserRepository;
+import io.jsonwebtoken.Claims;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 
 @Component
+@RequiredArgsConstructor
 public class JwtFilter extends OncePerRequestFilter {
-    private final JwtService jwtService;
 
-    public JwtFilter(JwtService jwtService) {
-        this.jwtService = jwtService;
-    }
+    private final JwtService jwtService;
+    private final IAppUserRepository userRepository;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -31,14 +31,14 @@ public class JwtFilter extends OncePerRequestFilter {
         if (header != null && header.startsWith("Bearer ")) {
             String token = header.substring(7);
 
-            if (jwtService.isAccessTokenValid(token)) {
-                String username = jwtService.extractUsernameFromAccessToken(token);
-                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(username,
-                        null, Collections.emptyList()); // here we will be adding the roles later(can later be replaced
-                                                        // with
-                // List.of(new SimpleGrantedAuthority("ROLE_USER"))
-
-                SecurityContextHolder.getContext().setAuthentication(authentication);
+            Claims claims = jwtService.parseAccessToken(token);
+            if (claims != null) {
+                String username = claims.getSubject();
+                if (userRepository.existsByUsername(username)) {
+                    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                            username, null, Collections.emptyList());
+                    SecurityContextHolder.getContext().setAuthentication(authentication);
+                }
             }
         }
         filterChain.doFilter(request, response);
